# Real-Time-Head-Detection-and-Tracking-System

./: README.md
src/HeadDetector/: CMakeLists.txt  package.xml
src/HeadDetector/src/: head_detector_node.cpp  main.cpp  main_ply_realtime.cpp
src/HeadDetector/src/detection/: Detector.h  Detector.hpp  HaarMasks.h  IntegralVolume.h  IntegralVolume.hpp
src/HeadDetector/src/util/: CloudUtils.h  CloudUtils.hpp
src/HeadDetector/src/visualization/: Visualizer.h  Visualizer.hpp  plot_masks.py
src/HeadDetector/test_ply/: 001_male.ply  001_male_expert.ply  001_male_hard.ply  male.ply
src/assets/: Screencast from 2025-06-12 00-06-39.webm
src/head_detector_sim/: CMakeLists.txt  package.xml
src/head_detector_sim/launch/: person_sim.launch.py
src/head_detector_sim/worlds/: two_cameras.sdf
src/pointcloud_concatenate/: CMakeLists.txt  package.xml
src/pointcloud_concatenate/include/pointcloud_concatenate/: pointcloud_concatenate.hpp
src/pointcloud_concatenate/launch/: pointcloud_concatenate_launch.py
src/pointcloud_concatenate/src/: pointcloud_concatenate.cpp  pointcloud_concatenate_node.cpp
