<?xml version="2.0"?>
<package format="3">
  <name>head_detector</name>
  <version>0.1.0</version>
  <description>GPU-accelerated 3-D Haar head detector, publishes RViz markers.</description>

  <maintainer email="you@example.com">Your Name</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>pcl_conversions</depend>
<depend>tf2_sensor_msgs</depend>
<depend>tf2_ros</depend>

  <!-- bring PCL & Eigen in via system packages -->
  <exec_depend>libpcl-all-dev</exec_depend>
  <exec_depend>libeigen3-dev</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
